--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
           <h2 class="visually-hidden">Особенности студии</h2>
           <ul class="studio-features-list">
             <li class="studio-features-item">
-              <img src="img/illustration-1.png">
               <h3>Долго, дорого, скрупулезно</h3>
               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
               <a class="btn" href="studio.html">Узнать больше</a>
             </li>
             <li class="studio-features-item">
-              <img src="img/illustration-2.png">
               <h3>Любим математику как никто другой</h3>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a class="btn" href="studio.html">Узнать больше</a>
             </li>
             <li class="studio-features-item">
-              <img src="img/illustration-3.png">
               <h3>Только ночь, только хардкор</h3>
               <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a class="btn" href="studio.html">Узнать больше</a>
@@ -63,16 +60,19 @@
   		  <h2 class="visually-hidden">Наши продукты</h2>
   		  <ul class="products-list">
   		    <li class="products-item">
+  		      <img src="img/illustration-1.png">
   		      <h3>Веб-сайты</h3>
   			  <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
   			  <a class="btn btn-web" href="#">Заказать</a>
   		    </li>
 		    <li class="products-item">
+		      <img src="img/illustration-2.png">
   			  <h3>Приложения</h3>
   			  <p>Покорите топ-10 приложений в AppleStore и Google Play</p>
   			  <a class="btn btn-app" href="#">Заказать</a>
   		    </li>
 		    <li class="products-item">
+		      <img src="img/illustration-3.png">
   			  <h3>Презентации</h3>
   			  <p>Вы даже не подозреваете насколько вы изумительны!</p>
   			  <a class="btn btn-presentation" href="#">Заказать</a>
@@ -145,7 +145,7 @@
   	      <img src="img/map.jpg" width="1439" height="416" alt="Офис компании по адресу ул.Большая Конюшенная, д.19/8, Санкт-Петербург"> <!--как разместить значок нерд на карте?-->
   	    </p>
   	  </div>
-  	  <div class="container">
+  	  <div class="footer-container">
   	  	<div class="footer-wrapper">
   	      <div class="social">
   	      	<div class="discount">
